????-??-?? Technology Preview 2
-------------------------------

Previews :
  * Scaling is now logarithmic (slower when zoomed).
  * Drawing now takes advantage of multiple CPU cores.

3D Explorer:
  * Added ground texture and skybox.
  * Progressive rendering now takes advantage of multiple CPU cores.

Scenery :
  * Added clouds hardness to light.
  * Added sun halo control.
  * New cloud model with 2 noises : one for the global shape and one for edges.
  * Terrain shadows have been improved and are now configurable.
  * New sky model (based on Preetham's work).
  * Textures ranges are now using curves.

Rendering :
  * New texture model (perpendicular displacement and thickness).
  * Added full scene antialiasing (FSAA).

GUI :
  * Improved curve rendering.
  * New material editor.
  * Added render timer.
  * Previews locations and render params are now saved.
  * Added grid and axis labels to curve editor.
  * Added camera location to previews.

Misc :
  * Version handling in saved files.

2012-04-20 Technology Preview 1
-------------------------------

First preview version :
  * Ground with simple texture layers
  * Water with waves, transparency and reflection
  * Sky with sun
  * Atmosphere with fog
  * Cloud 3d layers
  * Two-pass rendering
  * Form-based GUI, with real-time previews